ghc-4335c07/testsuite/tests/dependent/should_fail/PromotedClass.hs
{-# LANGUAGE TypeInType, GADTs #-}

module PromotedClass where

import Data.Proxy

data X a where
  MkX :: Show a => a -> X a

foo :: Proxy ('MkX 'True)
foo = Proxy
